--- a/public/Testing-page.html
+++ b/public/Testing-page.html
@@ -215,27 +215,26 @@
         let currentPokemon = null; 
 
         const megaSprites = {
-            "gardevoir": "https://i.ibb.co/VJJDCHV/362-front-s.gif",
-            "banette": "https://i.ibb.co/tCg2pzd/373-front-n.gif",
-            "gengar": "https://i.ibb.co/mThQmqL/376-front-n.gif",
-            "salamence": "https://i.ibb.co/4FsfVg7/384-front-n.gif",
+            "glalie": "https://i.ibb.co/VJJDCHV/362-front-s.gif",
+            "salamence": "https://i.ibb.co/tCg2pzd/373-front-n.gif",
+            "metagross": "https://i.ibb.co/mThQmqL/376-front-n.gif",
+            "rayquaza": "https://i.ibb.co/4FsfVg7/384-front-n.gif",
             "lopunny": "https://i.ibb.co/0tFL3br/428-front-n.gif",
-            "sharpedo": "https://i.ibb.co/9q1yyvP/445-front-n.gif",
-            "mewtwo": "https://i.ibb.co/F0MRVbg/448-front-n.gif",
-            "pidgeot": "https://i.ibb.co/RhzFpt1/460-front-n.gif",
-            "absol": "https://i.ibb.co/wBhc3Kr/531-front-n.gif",
-            "mew": "https://i.ibb.co/s55wF1W/150-front-n.gif",
-            "latios": "https://i.ibb.co/fHy2KTZ/181-front-n.gif",
-            "latias": "https://i.ibb.co/pfmTZS3/208-front-n.gif",
+            "garchomp": "https://i.ibb.co/9q1yyvP/445-front-n.gif",
+            "lucario": "https://i.ibb.co/F0MRVbg/448-front-n.gif",
+            "abomasnow": "https://i.ibb.co/RhzFpt1/460-front-n.gif",
+            "audino": "https://i.ibb.co/wBhc3Kr/531-front-n.gif",
+            "mewtwo": "https://i.ibb.co/s55wF1W/150-front-n.gif",
+            "amparos": "https://i.ibb.co/fHy2KTZ/181-front-n.gif",
+            "steelix": "https://i.ibb.co/pfmTZS3/208-front-n.gif",
             "scizor": "https://i.ibb.co/XybN09n/212-front-n.gif",
-            "sableye": "https://i.ibb.co/31Z8X91/214-front-n.gif",
-            "dusknoir": "https://i.ibb.co/dQdgBty/229-front-n.gif",
-            "charizard_x": "https://i.ibb.co/xgJ2FH6/006-front-n.gif",
-            "charizard_y": "https://i.ibb.co/006-front-n.gif",
+            "heracross": "https://i.ibb.co/31Z8X91/214-front-n.gif",
+            "houndoom": "https://i.ibb.co/dQdgBty/229-front-n.gif",
+            "charizard_y": "https://i.ibb.co/xgJ2FH6/006-front-n.gif",
             "blastoise": "https://i.ibb.co/jbkwVYC/009-front-n.gif",
-            "sceptile": "https://i.ibb.co/g4nRBc4/310-front-n.gif",
-            "heracross": "https://i.ibb.co/2tbWVP1/065-front-n.gif",
-            "manectric": "https://i.ibb.co/NtjkSKD/080-front-n.gif",
+            "manectric": "https://i.ibb.co/g4nRBc4/310-front-n.gif",
+            "alakazam": "https://i.ibb.co/2tbWVP1/065-front-n.gif",
+            "slowbro": "https://i.ibb.co/NtjkSKD/080-front-n.gif",
         };
 
         const fetchPokemons = async (limit = 1025) => {
