--- a/public/Testing-page.html
+++ b/public/Testing-page.html
@@ -225,16 +225,41 @@
             "abomasnow": "https://i.ibb.co/RhzFpt1/460-front-n.gif",
             "audino": "https://i.ibb.co/wBhc3Kr/531-front-n.gif",
             "mewtwo": "https://i.ibb.co/s55wF1W/150-front-n.gif",
-            "amparos": "https://i.ibb.co/fHy2KTZ/181-front-n.gif",
+            "ampharos": "https://i.ibb.co/fHy2KTZ/181-front-n.gif",
             "steelix": "https://i.ibb.co/pfmTZS3/208-front-n.gif",
             "scizor": "https://i.ibb.co/XybN09n/212-front-n.gif",
             "heracross": "https://i.ibb.co/31Z8X91/214-front-n.gif",
             "houndoom": "https://i.ibb.co/dQdgBty/229-front-n.gif",
-            "charizard_y": "https://i.ibb.co/xgJ2FH6/006-front-n.gif",
+            "charizard": "https://i.ibb.co/xgJ2FH6/006-front-n.gif",
             "blastoise": "https://i.ibb.co/jbkwVYC/009-front-n.gif",
             "manectric": "https://i.ibb.co/g4nRBc4/310-front-n.gif",
             "alakazam": "https://i.ibb.co/2tbWVP1/065-front-n.gif",
             "slowbro": "https://i.ibb.co/NtjkSKD/080-front-n.gif",
+             "gallade": "https://i.ibb.co/LN2Vg51/475-front-n.gif",   // Mega Gallade
+    "tyranitar": "https://i.ibb.co/XJq4XqS/248-front-n.gif", // Mega Tyranitar
+    "sceptile": "https://i.ibb.co/rZDrK5G/254-back-n.gif",    // Mega Sceptile
+    "blaziken": "https://i.ibb.co/4ShDqJB/257-front-n.gif",    // Mega Blaziken
+    "swampert": "https://i.ibb.co/zGkM4LM/260-front-n.gif",    // Mega Swampert
+    "gardevoir": "https://i.ibb.co/9pPth7X/282-front-n.gif",   // Mega Gardevoir
+    "sableye": "https://i.ibb.co/wz6HHdb/302-front-n.gif",     // Mega Sableye
+    "mawile": "https://i.ibb.co/5TFTLpW/303-front-n.gif",      // Mega Mawile
+    "aggron": "https://i.ibb.co/HxjgJVw/306-front-n.gif",      // Mega Aggron
+    "medicham": "https://i.ibb.co/2F50j4r/308-front-n.gif",    // Mega Medicham
+    "sharpedo": "https://i.ibb.co/V3Kqy0m/319-front-n.gif",    // Mega Sharpedo
+    "rayquaza": "https://i.ibb.co/0BXb4Zj/323-front-n.gif",    // Mega Rayquaza
+    "scizor": "https://i.ibb.co/26KnxX0/334-front-n.gif",      // Mega Scizor
+    "banette": "https://i.ibb.co/PCYqMd2/354-front-n.gif",     // Mega Banette
+    "absol": "https://i.ibb.co/kSyKzJs/359-front-n.gif",       // Mega Absol
+    "blastoise": "https://i.ibb.co/cFDk4SX/003-front-n.gif",   // Mega Blastoise
+    "charizard": "https://i.ibb.co/St7SYwY/006-front-n.gif",   // Mega Charizard X
+    "beedrill": "https://i.ibb.co/r7TjFDW/015-front-n.gif",    // Mega Beedrill
+    "pidgeot": "https://i.ibb.co/bNcnK3h/018-front-n.gif",      // Mega Pidgeot
+    "gengar": "https://i.ibb.co/b2t21LQ/094-front-n.gif",       // Mega Gengar
+    "kangaskhan": "https://i.ibb.co/g4Tc4v6/115-front-n.gif",  // Mega Kangaskhan
+    "snorlax": "https://i.ibb.co/nC6412N/127-front-n.gif",      // Mega Snorlax
+    "gyarados": "https://i.ibb.co/XX4VMtY/130-front-n.gif",     // Mega Gyarados
+    "aerodactyl": "https://i.ibb.co/dKKPmbJ/142-front-n.gif",   // Mega Aerodactyl
+    "mewtwo": "https://i.ibb.co/xLD05dQ/150-front-n.gif"       // Mega Mewtwo Y
         };
 
         const fetchPokemons = async (limit = 1025) => {
