--- a/public/Testing-page.html
+++ b/public/Testing-page.html
@@ -246,17 +246,17 @@
     "aggron": "https://i.ibb.co/HxjgJVw/306-front-n.gif",      // Mega Aggron
     "medicham": "https://i.ibb.co/2F50j4r/308-front-n.gif",    // Mega Medicham
     "sharpedo": "https://i.ibb.co/V3Kqy0m/319-front-n.gif",    // Mega Sharpedo
-    "rayquaza": "https://i.ibb.co/0BXb4Zj/323-front-n.gif",    // Mega Rayquaza
-    "scizor": "https://i.ibb.co/26KnxX0/334-front-n.gif",      // Mega Scizor
+    "camerupt": "https://i.ibb.co/0BXb4Zj/323-front-n.gif",    // Mega Rayquaza
+    "altaria": "https://i.ibb.co/26KnxX0/334-front-n.gif",      // Mega Scizor
     "banette": "https://i.ibb.co/PCYqMd2/354-front-n.gif",     // Mega Banette
     "absol": "https://i.ibb.co/kSyKzJs/359-front-n.gif",       // Mega Absol
-    "blastoise": "https://i.ibb.co/cFDk4SX/003-front-n.gif",   // Mega Blastoise
+    "venusaur": "https://i.ibb.co/cFDk4SX/003-front-n.gif",   // Mega Blastoise
     "charizard": "https://i.ibb.co/St7SYwY/006-front-n.gif",   // Mega Charizard X
     "beedrill": "https://i.ibb.co/r7TjFDW/015-front-n.gif",    // Mega Beedrill
     "pidgeot": "https://i.ibb.co/bNcnK3h/018-front-n.gif",      // Mega Pidgeot
     "gengar": "https://i.ibb.co/b2t21LQ/094-front-n.gif",       // Mega Gengar
     "kangaskhan": "https://i.ibb.co/g4Tc4v6/115-front-n.gif",  // Mega Kangaskhan
-    "snorlax": "https://i.ibb.co/nC6412N/127-front-n.gif",      // Mega Snorlax
+    "pinsir": "https://i.ibb.co/nC6412N/127-front-n.gif",      // Mega Snorlax
     "gyarados": "https://i.ibb.co/XX4VMtY/130-front-n.gif",     // Mega Gyarados
     "aerodactyl": "https://i.ibb.co/dKKPmbJ/142-front-n.gif",   // Mega Aerodactyl
     "mewtwo": "https://i.ibb.co/xLD05dQ/150-front-n.gif"       // Mega Mewtwo Y
