--- a/public/Testing-page.html
+++ b/public/Testing-page.html
@@ -202,7 +202,7 @@
 
     <div id="pokemonSection">
         <h2>Pokémon Generator</h2>
-        <input type="text" id="pokemonSearch" placeholder="Search Pokémon by name or ID" value="pikachu">
+        <input type="text" id="pokemonSearch" placeholder="Search Pokémon by name or ID" value="Charizard">
         <input type="button" value="Search" onClick="searchPokemon()"><br>
         <input type="button" value="Generate Random Pokémon" onClick="showPokemon()"><br>
 
