--- a/public/t1a18-classes-Aden.html
+++ b/public/t1a18-classes-Aden.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -203,7 +202,7 @@
 
     <div id="pokemonSection">
         <h2>Pokémon Generator</h2>
-        <input type="text" id="pokemonSearch" placeholder="Search Pokémon by name or ID" value="pikachu">
+        <input type="text" id="pokemonSearch" placeholder="Search Pokémon by name or ID" value="Charizard">
         <input type="button" value="Search" onClick="searchPokemon()"><br>
         <input type="button" value="Generate Random Pokémon" onClick="showPokemon()"><br>
 
@@ -462,3 +461,9 @@
     </script>
 </body>
 </html>
+for the pokemon thing i used a json to get the images and the data for each 1025 for to help get it easier to do all of them and using (getrandompokmon) to have the pokemon that
+is search by the id number or name to show up and for the megas i made it to where i used (showmegaevolution) to have it get it on screen and had to get the images of the megas from the internet
+and then used ImgBB to turn them into a working image/gif lastly for pokemon for the shinys its the same as (getrandompokemon) but instead its (showshiny) and it also uses json to get the image. 
+for the animals its the same thing as what you gave us for the sheet but i just add more animals to it like (showBird) and also the name is just a input box with the defult as whiskers and the age 
+is the same thing and on click for the button (showanimal, showname, and showage) is used to have it show below with the description and each animal has their own little thing saying like
+name of animal is this age and living in my house or something like that its a defult for each animal and they have diffrent ones
