--- a/public/t1a06-in-out-Aden.html
+++ b/public/t1a06-in-out-Aden.html
@@ -58,3 +58,19 @@
 
 </body>
 </html>
+
+
+   <input type="text" id="myAge" value="16" placeholder="Enter your Age"> 
+    <input type="button" value="Show on page" onclick="showAge()">
+
+    <div id="myDiv01">...</div>
+
+    <script>
+        function showAge() {
+            const age = document.getElementById('myage').value;
+            document.getElementById('myDiv01').innerHTML = 'Your are : ' + Age;
+        }
+    </script>
+
+</body>
+</html>
