--- a/public/t1a06-in-out-Aden.html
+++ b/public/t1a06-in-out-Aden.html
@@ -45,10 +45,10 @@
     <h1>t1a06-in-out-Aden.html</h1>
     
     <input type="text" id="myFirstName" value="Aden" placeholder="Enter your name"> 
-    <input type="number" id="myAge" placeholder="Enter your age"> 
-    <input type="date" id="myBirthdate"> 
-    <input type="text" id="myFavoriteAnimal" placeholder="Enter your favorite animal"> 
-    <input type="text" id="myFavoriteColor" placeholder="Enter your favorite color (e.g., Red, Blue)"> 
+    <input type="number" id="myAge" value="25" placeholder="Enter your age"> 
+    <input type="date" id="myBirthdate" value="1998-01-01"> 
+    <input type="text" id="myFavoriteAnimal" value="Dog" placeholder="Enter your favorite animal"> 
+    <input type="text" id="myFavoriteColor" value="Blue" placeholder="Enter your favorite color (e.g., Red, Blue)"> 
     <input type="button" value="Show on page" onclick="showInfo()">
 
     <div id="myDiv01">...</div>
