--- a/public/t1a06-in-out-Aden.html
+++ b/public/t1a06-in-out-Aden.html
@@ -11,32 +11,38 @@
             flex-direction: column;
             align-items: center;
             margin-top: 50px;
+            background: linear-gradient(to right, blue, purple); /* Gradient background */
+            color: white; /* Change text color for better visibility */
+            height: 100vh; /* Make sure the background covers full height */
+            padding: 20px; /* Add some padding */
         }
         h1 {
             text-align: center;
-            color: #333;
+            color: #fff; /* Ensures the heading is visible on the gradient */
         }
         input[type="text"], input[type="number"], input[type="date"] {
             padding: 10px;
             margin: 10px 0;
             font-size: 16px;
+            border: none; /* Remove border */
+            border-radius: 5px; /* Rounded corners */
         }
         input[type="button"] {
             padding: 10px 15px;
             font-size: 16px;
             cursor: pointer;
-            background-color: #007BFF;
+            background-color: rgba(0, 123, 255, 0.8); /* Semi-transparent blue */
             color: white;
             border: none;
             border-radius: 5px;
         }
         input[type="button"]:hover {
-            background-color: #0056b3;
+            background-color: rgba(0, 123, 255, 1); /* More opaque blue on hover */
         }
         #myDiv01 {
             margin-top: 20px;
             font-size: 18px;
-            color: #555;
+            color: #fff; /* Ensures output text is visible */
         }
         .gender-group {
             margin: 10px 0;
