--- a/public/t1a18-classes-Aden.html
+++ b/public/t1a18-classes-Aden.html
@@ -463,39 +463,39 @@
 </html>
 
         <h2>list of the megas just copy and paste them into the pokemon search thing
-            glalie
-            salamence
-            metagross
-            rayquaza
-            lopunny
-            garchomp
-            lucario
-            abomasnow
-            audino
-            ampharos
-            steelix
-            scizor
-            heracross
-            houndoom
-            blastoise
-            manectric
-            alakazam
-            slowbro
-            gallade
-            tyranitar
-            sceptile
-            blaziken
-            swampert
-            gardevoir
-            sableye
-            mawile
-            aggron
-            medicham
-            sharpedo
-            camerupt
-            altaria
-            banette
-            absol
-            venusaur
-            charizard
+            glalie,
+            salamence,
+            metagross,
+            rayquaza,
+            lopunny,
+            garchomp,
+            lucario,
+            abomasnow,
+            audino,
+            ampharos,
+            steelix,
+            scizor,
+            heracross,
+            houndoom,
+            blastoise,
+            manectric,
+            alakazam,
+            slowbro,
+            gallade,
+            tyranitar,
+            sceptile,
+            blaziken,
+            swampert,
+            gardevoir,
+            sableye,
+            mawile,
+            aggron,
+            medicham,
+            sharpedo,
+            camerupt,
+            altaria,
+            banette,
+            absol,
+            venusaur,
+            charizard,
             mewtwo</h2>
