--- a/public/t1a18-classes-Aden.html
+++ b/public/t1a18-classes-Aden.html
@@ -462,7 +462,7 @@
 </body>
 </html>
 
-        <h2>list of the megas just copy and paste them into the pokemon search thing
+        <h2>list of the megas just copy and paste them into the pokemon search thing:
             glalie,
             salamence,
             metagross,
